# VeriPilot

./: .gitignore  .gitmodules  README.md
veripilot/: .env.template  README.md  REQUIREMENTS.md  pyproject.toml  results.json
veripilot/config/: dalek_queries.json  lean_rag.yaml
veripilot/data/sources/: manifest.json
veripilot/data/test_queries/: lean_test_queries.yaml
veripilot/documentation/: RAG-TODO.md  corpus-expansion-roadmap.md  full-mathlib4-extraction.md
veripilot/scripts/: download_sources.py  evaluate_rag.py  expand_and_evaluate.sh  extract_corpus.py  index_corpus.py  validate_extraction.py
veripilot/src/interfaces/: rag_provider.py
veripilot/src/rag/lean/: book_extractor.py  extractor.py  graph_rag_lean.py  lightweight_extractor.py  llamaindex_lean.py  pdf_extractor.py  type_index.py
veripilot/src/rag/shared/: cascading_retriever.py  embeddings.py
veripilot/tests/integration/: test_connections.py  test_lean_rag.py
